--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mobilenowgroup-tangent-solutions/powerbi-sdk",
+    "name": "mobilenowgroup/powerbi-sdk",
     "description": "PHP SDK for working with PowerBI",
     "type": "library",
     "license": "MIT",
@@ -21,7 +21,8 @@
     },
     "require": {
         "php": ">=5.6",
-        "guzzlehttp/guzzle": "*"
+        "guzzlehttp/guzzle": "*",
+        "league/oauth2-client": "^2.6"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
